[COMMIT] ADD CODE MODELS AND SERVICES

--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -72,7 +72,7 @@
                             </a>
                         </td>
                         <td>
-                        <a (click="editUsers(user)")>
+                        <a (click="deleteUsers(user,_id)")>
                             <i class="material-icons">delete</i>
                         </a>
                         </td>
