--- a/frontend/src/app/components/type-trans/type-trans.component.html
+++ b/frontend/src/app/components/type-trans/type-trans.component.html
@@ -49,12 +49,12 @@
                         <td>{{type.route}}</td>
                         <td>{{type.price}}</td>
                         <td>
-                            <a (click="editTypeTrans(type)")>
+                            <a (click)="editTypeTrans(type)">
                                 <i class="material-icons">edit</i>
                             </a>
                         </td>
                         <td>
-                        <a (click="deleteTypeTrans(type,_id)")>
+                        <a (click)="deleteTypeTrans(type,_id)">
                             <i class="material-icons">delete</i>
                         </a>
                         </td>
