--- a/frontend/src/app/menu/menu/menu.component.html
+++ b/frontend/src/app/menu/menu/menu.component.html
@@ -1,16 +1,31 @@
-<nav class="nav-wrapper blue">
-    <div class="container">
-        <a href="#" class="brand-logo"></a>
-        <ul id="nav-mobile" class="right">
-            <li><a routerLink='/home'><img class="img" src="../../../assets/0b04e857-30a6-4289-a53d-139f5605b5fa_200x200.png " width="150" height="150" alt=""></a></li>
-            <li><a routerLink='/home'>Home</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a  routerLink='/users'>User</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a routerLink='/type-trans'>Type Trans</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a  routerLink='/transport'>Transport</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a  routerLink='/places'>Places</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a  routerLink='/aplication'>Ticket</a></li>
-            <li *ngIf='identity.role.indexOf(ROLE_ADMIN")>=0'><a  routerLink='/contact'>Contact</a></li>
-            <li><a class="waves-effect waves-light btn-small" (click)="logout()"><i class="material-icons right">person_outline</i>Bienvenido: {{identity.name}}</a></li>
-        </ul>
+<nav class="light blue-grey lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="./" class="brand-logo"><img class="img"
+        src="../../../assets/0b04e857-30a6-4289-a53d-139f5605b5fa_200x200.png " width="150" height="150"
+        alt=""></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a routerLink='/home'>Home</a></li>
+        <!-- <li><a routerLink='/users'>User</a></li> -->
+        <li><a routerLink='/type-trans'>Type Trans</a></li>
+        <li><a routerLink='/transport'>Transport</a></li>
+        <li><a routerLink='/places'>Places</a></li>
+        <li><a routerLink='/aplication'>Ticket</a></li>
+        <li><a routerLink='/contact'>Contact</a></li>
+      </ul>
+      <ul id="nav-mobile" class="sidenav">
+        <li><a routerLink='/home'></a></li>
+        <li><a routerLink='/home'>Home</a></li>
+        <!-- <li><a routerLink='/users'>User</a></li> -->
+        <li><a routerLink='/type-trans'>Type Trans</a></li>
+        <li><a routerLink='/transport'>Transport</a></li>
+        <li><a routerLink='/places'>Places</a></li>
+        <li><a routerLink='/aplication'>Ticket</a></li>
+        <li><a routerLink='/contact'>Contact</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
-</nav>
+  </nav>
+  <script>
+    $(document).ready(function(){
+      $('.sidenav').sidenav();
+    });
+  </script>
