--- a/frontend/src/app/view/contact/contact.component.html
+++ b/frontend/src/app/view/contact/contact.component.html
@@ -1,2 +1,62 @@
-<h1>Contact</h1>
-<br><br><br><br><br>
+
+<div class="container">
+    <div class="row">
+        <div class="col m10 offset-m1 s12">
+            <h2 class="center-align">Formulario de Contacto</h2>
+            <div class="row">
+                <form class="col s12">
+                    <div class="row">
+                        <div class="input-field col m6 s12">
+                            <input id="first_name" type="text" class="validate">
+                            <label for="first_name">Nombre</label>
+                        </div>
+                        <div class="input-field col m6 s12">
+                            <input id="last_name" type="text" class="validate">
+                            <label for="last_name">Apellido</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col m6 s12">
+                            <i class="mdi-content-mail prefix"></i>
+                            <input id="email" type="email" class="validate" required>
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="input-field col m6 s12">
+                            <i class="mdi-maps-store-mall-directory prefix"></i>
+                            <input id="password" type="password" class="validate">
+                            <label for="password">Contraseña</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                          <label for="budget">Incidencia</label>
+                          <br/>
+                        </div>
+                        <div class="input-field col s12">
+                            <select class="browser-default" id="Incidencia">
+                              <option value="" selected disabled>Elija su opción</option>
+                              <option value="1">Logueo</option>
+                              <option value="2">Error 404</option>
+                              <option value="3">Transporte</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col s12">
+                          <textarea id="message" class="materialize-textarea"></textarea>
+                          <label for="message">Mensaje</label>
+                        </div>
+                    </div>
+                    
+                    <div class="divider"></div>
+                    <div class="row">
+                        <div class="col m12">
+                         <p class="center-align"><button class="btn btn-large waves-effect waves-light" type="button" name="action">Enviar</button></p>
+                         <p class="center-align"><button class="btn btn-large waves-effect waves-light" type="reset" name="action">Borrar</button></p>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
