--- a/frontend/src/app/view/home/home.component.html
+++ b/frontend/src/app/view/home/home.component.html
@@ -1,2 +1,49 @@
-<h1>Home</h1>
-<br><br><br><br><br><br>
+<div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <br><br>
+        <h1 class="header center blue-text">Trans Al-Andalus</h1>
+        <div class="center">
+            <h5 class="header light">Bienvenido a este MEAN-CRUD hecho en Angular, Nodejs,MongoDB y Materialize</h5>
+        </div>
+        <br>
+    </div>
+</div>
+<div class="container">
+    <div class="section">
+        <div class="row">
+            <div class="col s12 m4">
+                <h3 class="center">Director</h3><br><br>
+                <img class="responsive-img" src="../../../assets/186313.png"><br><br>
+                <p class="center-align">Me llamo Abel y soy el Director.</p>
+                <div class="center">
+                    <a class="waves-effect btn">Más Información</a>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <h3 class="center">Recurso Humanos</h3>
+                <img class="responsive-img" src="../../../assets/avatar4.png ">
+                <p class="center-align">Me llamo Cristina y soy la de Recursos Humanos.</p>
+                <div class="center">
+                    <a class="waves-effect btn">Más Información</a>
+                </div>
+            </div>
+
+            <div class="col s12 m4">
+                <h3 class="center">Departamento Calidad</h3>
+                <img class="responsive-img" src="../../../assets/147133.png">
+                <p class="center-align">Me llamo Jóse y soy del departamento de calidad.</p>
+                <div class="center">
+                    <a class="waves-effect btn">Más Información</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<video class="responsive-video" controls>
+    <source class="video" src="../../../assets/Renfe el móvil como medio de pago y acceso a trenes.mp4"
+        type="video/mp4">
+</video>
