--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+ <div class="container">
     <div class="row">
         <div class="col s5">
             <div class="card">
@@ -82,4 +82,4 @@
         </div>
     </div>
 </div>
-<h1>users works!</h1> -->
+<h1>users works!</h1> 
