--- a/frontend/src/app/menu/menu/menu.component.html
+++ b/frontend/src/app/menu/menu/menu.component.html
@@ -4,17 +4,17 @@
         alt=""></a>
       <ul class="right hide-on-med-and-down">
         <li><a routerLink='/home'>Home</a></li>
-        <!-- <li><a routerLink='/users'>User</a></li> -->
-        <li><a routerLink='/type-trans'>Type Trans</a></li>
-        <li><a routerLink='/transport'>Transport</a></li>
-        <li><a routerLink='/places'>Places</a></li>
-        <li><a routerLink='/aplication'>Ticket</a></li>
+         <li *ngIf='identity.role.indexOf("ROLE_ADMIN")>=0'><a routerLink='/users'>User</a></li>
+        <li *ngIf='identity.role.indexOf("ROLE_ADMIN")>=0'><a routerLink='/type-trans'>Type Trans</a></li>
+        <li *ngIf='identity.role.indexOf("ROLE_ADMIN")>=0'><a routerLink='/transport'>Transport</a></li>
+        <li *ngIf='identity.role.indexOf("ROLE_ADMIN")>=0'><a routerLink='/places'>Places</a></li>
+        <li *ngIf='identity.role.indexOf("ROLE_ADMIN")>=0'><a routerLink='/aplication'>Ticket</a></li>
         <li><a routerLink='/contact'>Contact</a></li>
       </ul>
       <ul id="nav-mobile" class="sidenav">
         <li><a routerLink='/home'></a></li>
         <li><a routerLink='/home'>Home</a></li>
-        <!-- <li><a routerLink='/users'>User</a></li> -->
+         <li><a routerLink='/users'>User</a></li>
         <li><a routerLink='/type-trans'>Type Trans</a></li>
         <li><a routerLink='/transport'>Transport</a></li>
         <li><a routerLink='/places'>Places</a></li>
