--- a/frontend/src/app/view/home/home.component.html
+++ b/frontend/src/app/view/home/home.component.html
@@ -13,7 +13,7 @@
         <div class="row">
             <div class="col s12 m4">
                 <h3 class="center">Director</h3><br><br>
-                <img class="responsive-img" src="../../../assets/186313.png"><br><br>
+                <img class="responsive-img" src="../../../assets/186313.png"><br>
                 <p class="center-align">Me llamo Abel y soy el Director.</p>
                 <div class="center">
                     <a class="waves-effect btn">Más Información</a>
